--- a/find-conds.adoc
+++ b/find-conds.adoc
@@ -43,17 +43,20 @@ arrow color gray from 0.3in south of X.s to Y.n
 One great place to find the abstraction is by trying to eliminate
 large scoped conditions.
 
-What I mean by that is special cases -- if statements and the like --
+What I mean by that is special cases -- conditions and if statements --
 based on variables that have a larger scope than the current context.
 
-It makes sense that (*step*) if your condition is based on something
-that doesn't change in the current scope, it should be evaluated earlier
-and you should have an object that doesn't care about the condition.
+The intuition behind this idea is this:
+(*step*)
+If the condition is based on a value that doesn't change in the current scope,
+then the condition will also not change.
+Therefore, we should remove it from the current scope,
+and evaluate it somewhere where it might.
 
 This might be better demonstrated with an example...
 --
 
-[%auto-animate.columns.wrap]
+[%auto-animate.columns]
 == {fix-conds}
 
 [.column.is-one-third]
@@ -65,10 +68,20 @@ type SiteGen struct {
   LinkStyle LinkStyle
 }
 ----
+
+[source.medium,go]
+----
+type LinkStyle int
+
+const (
+  LinkStyleDir   LinkStyle = iota
+  LinkStylePlain
+  LinkStyleHTML
+)
+----
 --
 
 [.column.is-two-thirds%step]
---
 [source%linenums,go,data-id=right]
 ----
 func (g *SiteGen) RelativeURL(dst *Page) string {
@@ -83,35 +96,24 @@ func (g *SiteGen) RelativeURL(dst *Page) string {
   }
 }
 ----
---
-
-[.column.is-one-third]
---
-[source,go]
-----
-type LinkStyle int
-
-const (
-  LinkStyleDir   LinkStyle = iota
-  LinkStylePlain
-  LinkStyleHTML
-)
-----
---
 
 [.notes]
 --
 Think back to the static website rendering example.
-We declared an enum and placed it inside a struct field --
-because it has scope larger than all the methods of SiteGen.
 
-If we leave it at that, (*step*) we probably have logic that looks
-something like this.
+We declared an enum, LinkStyle, and placed it inside the struct, SiteGen,
+because it has scope larger than the struct.
+
+If we left it at that, (*step*) SiteGen probably consumed it like this.
 An if-else or a switch statement rendering the link based on the style.
 
-This right here is a good place to find an abstraction.
-In fact, if you recall from that part of the presentation,
-we did find one...
+This right here is a good place to find the abstraction.
+The outcome of that switch statement will never change
+for a single SiteGen object.
+So we should make this decision in an outer context,
+and pass in something that SiteGen can use unconditionally.
+
+For example...
 --
 
 [%auto-animate.columns.wrap]
@@ -119,7 +121,7 @@ we did find one...
 
 [.column.is-one-third]
 --
-[source%linenums,go,data-id=left]
+[source%linenums,go,data-id=left, highlight="1-|3"]
 ----
 type SiteGen struct {
   /* ... */
@@ -130,7 +132,7 @@ type SiteGen struct {
 
 [.column.is-two-thirds]
 --
-[source,go]
+[source,go, highlight="1-|3"]
 ----
 func (g *SiteGen) RelativeURL(dst *Page) string {
   /* ... */
@@ -175,20 +177,19 @@ func (HTMLLinkStyler) StyleLink(u string) string {
 
 [.notes]
 --
-The LinkStyler.
-This is slightly different from what I showed before,
-but it follows the same idea.
+This might seem familiar.
 
-The condition of which style is being used is no longer a concern
-for the site generator.
-It's evaluated in a scope larger than SiteGen,
-and SiteGen just gets an object that it can use unconditionally
-to style links.
+* (*step*) We've switched to a LinkStyler interface.
+* (*step*) RelativeURL no longer evaluates the condition.
+* Something in the outer scope already decided for it,
+  and passed in the right LinkStyler implementation
+  for it to use unconditionally.
 
-This same concept of removing conditions with larger scope
-applies in other contexts.
-For example, instead of `if production { .. }` in 5 different places,
+This idea of removing conditions with larger scope
+applies in other contexts too.
+
+For example, instead of writing `if production { .. }` in 5 different places,
 decide whether you're in production well in advance,
-and pass in an object that behaves as one should in production or development
+and inject an object that behaves as one should in production or development --
 as the case may be.
 --
