--- a/fix-callback.adoc
+++ b/fix-callback.adoc
@@ -56,6 +56,8 @@ func (g *SiteGen) RelativeURL(dst *Page) string {
 
 [.notes]
 --
+Callback overuse.
+
 The previous section used enums to define link styles.
 But we could've gone a different direction: callbacks.
 
