slides: Include controls
Add controls to move between slides
to make usage more obvious when embedded on
https://abhinavg.net/2023/09/27/future-proof-packages/.

--- a/index.adoc
+++ b/index.adoc
@@ -1,7 +1,7 @@
 = Future-Proof Go Packages
 Abhinav Gupta
 2023-09-27
-:revealjs_controls: false
+:revealjs_controls: true
 :revealjs_controlsTutorial: false
 :revealjs_hash: true
 :revealjs_navigationMode: linear
